--- a/.gitignore
+++ b/.gitignore
@@ -64,4 +64,8 @@ typings/
 
 # End of https://www.gitignore.io/api/node
 
+
+# custom defined Deeb gitignore
 .idea/
+public/images/
+# End of custom defined Deeb gitignore
