--- a/firebase.json
+++ b/firebase.json
@@ -1,5 +1,17 @@
 {
   "hosting": {
-    "public": "public"
+    "public": "public",
+    "headers": [{
+    "source": "*",
+    "headers": [{
+      "key": "Cache-Control",
+      "value": "max-age=300"
+    }],
+    "source": "404.html",
+    "headers": [{
+      "key": "Cache-Control",
+      "value": "max-age=300"
+    }]
+  }]
   }
 }
