fixes bug in updating players' scores

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "unotest",
   "version": "1.0.0",
-  "description": "A simple cards against humanity test.",
+  "description": "A simple cards against humanity game coded in Firebase and plain Javascript.",
   "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
